--- a/_posts/2021-11-14-hlx-wxbot.md
+++ b/_posts/2021-11-14-hlx-wxbot.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 葫芦侠签到使用教程
+title: 葫芦侠使用教程
 subtitle: "葫芦侠板块批量签到"
 category : [wxbot]
 tags : [wxbot,葫芦侠]
@@ -10,11 +10,10 @@ header-img: "/img/post/wxbot-hlx.jpg"
 description:  "本文章介绍一些关于在公众号使用葫芦侠签到的方法。。。"
 ---
 
-## 介绍
+## 功能介绍
 本文章主要介绍公众号内的**葫芦侠**选项的使用。  
 用途：葫芦侠板块批量签到  
   
-
 ## 使用方法
 在公众号内发送：`葫芦侠#登录#手机号#密码`  
 假设我的手机号为：`13600000000`密码为：`abcde123`  
