--- a/_posts/2021-11-14-wyy-wxbot.md
+++ b/_posts/2021-11-14-wyy-wxbot.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 网易云刷歌使用教程
+title: 网易云使用教程
 subtitle: "刷播放量，刷等级。。。"
 category : [wxbot]
 tags : [wxbot,网易云音乐]
@@ -10,11 +10,10 @@ header-img: "/img/post/wxbot-wyy.jpg"
 description:  "本文章介绍一些关于在公众号使用网易云签到的方法。。。"
 ---
 
-## 介绍
+## 功能介绍
 本文章主要介绍公众号内的**网易云**选项的使用。  
 用途：可以刷听歌数，刷等级，领云贝等功能。。。  
   
-
 ## 使用方法
 在公众号内发送：`网易云#登录#手机号#密码`  
 假设我的手机号为：`13600000000`密码为：`abcde123`  
