--- a/_posts/2021-12-01-frp.md
+++ b/_posts/2021-12-01-frp.md
@@ -29,7 +29,7 @@ description:  "frp让你远在他乡管理家里的各种设备。"
   如果上面设置了token，要在客户端配置文件里的`[common]`下面一行填写上面设置的参数`token=123456`
 
 ## 服务端安装
-首先将解压后的文件`frps和frps.ini`上传到云主机，上传完成后使用`./frps -c frps.in`看到下面这样的输入就表示运行成功了 ![frps运行演示图](/img/post/frps_cg.png) 
+首先将解压后的文件`frps和frps.ini`上传到云主机，上传完成后使用`./frps -c frps.ini`看到下面这样的输入就表示运行成功了 ![frps运行演示图](/img/post/frps_cg.png) 
 
 ## 服务端配置文件
 ![frps.ini演示图](/img/post/frps_ini.png) 上面的图就是服务端的配置文件,第2行是设置主程序的端口号，第3行是我自己加的，通过简单地设置就可以使用了。
