--- a/_posts/2021-12-01-frp.md
+++ b/_posts/2021-12-01-frp.md
@@ -46,3 +46,14 @@ description:  "frp让你远在他乡管理家里的各种设备。"
 2. 如果服务端和客户端的系统和主机不同记得换不同的程序
 3. 上面说一个压缩包可能只能用里面服务端或客户端还需要下载另一个压缩包出现这种情况，下载的两个或多个压缩包版本必须是一样的才行哟。
 4. 修改配置需要重启程序。
+
+## frpc开机自启动（systemd）
+打开`frp_linux_amd64`文件夹下的`systemd`目录，编辑`frpc.service`文件（`frpc@.service`文件只是多了个自定义ini文件的功能），将其中的`user=nobody`改为`user=myserver`（即本机的用户名），**如果不改，启动时候会报错无法写入日志文件，权限禁止**  
+然后修改`ExecStart、ExecReload`中的路径为自己的文件路径  
+将修改后的`frpc.service`文件复制到`/etc/systemd/system/`：`sudo cp ./frpc.service /etc/systemd/system/`  
+激活frpc开机启动：`systemctl enable frpc`  
+手动运行frpc服务：`systemctl start frpc`或`service frpc start`  
+手动停止frpc服务：`systemctl stop frpc`或`service frpc stop`  
+手动重启frpc服务：`systemctl restart frpc`或`service frpc restart`  
+查看frpc运行状态：`systemctl status frpc`或`service frpc status`  
+**关闭frpc开机启动**：`systemctl disable frpc`  
