--- a/_posts/2024-02-02-palu.md
+++ b/_posts/2024-02-02-palu.md
@@ -87,7 +87,7 @@ DirectX 版本: 11
 
 ## 补丁安装方法
 ### 补丁链接
-`百度网盘`：[https://pan.baidu.com/s/1EgWjY2-tamI0QXGAx1-_-Q?pwd=y4u1](https://pan.baidu.com/s/1EgWjY2-tamI0QXGAx1-_-Q?pwd=y4u1)  
+`百度网盘`：[https://pan.baidu.com/s/1YeW3UPvprdOfM5zvY38N4Q?pwd=4x7m](https://pan.baidu.com/s/1YeW3UPvprdOfM5zvY38N4Q?pwd=4x7m)  
 `阿里云盘`：[https://www.alipan.com/s/JP2sefqDfLY](https://www.alipan.com/s/JP2sefqDfLY)
 ### 补丁4安装方法
 ```text
