添加自定义颜色代码，修改中英文

--- a/_posts/2024-02-02-palu.md
+++ b/_posts/2024-02-02-palu.md
@@ -8,6 +8,7 @@ date:       2024-02-02
 author:     "小张"
 header-img: "/img/post/palu.png"
 description:  "最新版 无需二次解压安装~~解压即玩~~~~~~~"
+font-color: "#FF1493"
 ---
 
 ## 关于这款游戏
