将所有图片转到腾讯云使用cos作为图床使用

--- a/_posts/2024-02-02-palu.md
+++ b/_posts/2024-02-02-palu.md
@@ -6,7 +6,7 @@ category : [帕鲁]
 tags : [帕鲁,游戏资源]
 date:       2024-02-02
 author:     "小张"
-header-img: "/img/post/palu.png"
+header-img: "https://tc.zfxkj.top/picgo/palu.png"
 description:  "最新版 无需二次解压安装~~解压即玩~~~~~~~"
 font-color: "#FF1493"
 ---
@@ -101,4 +101,4 @@ DirectX 版本: 11
 网盘本体V1.3.0 hotfix 需要打上Patch4补丁
 
 ## 微信公众号
-![微信公众号](/img/post/qrcode_WeChatPublic.jpg)
+![微信公众号](https://tc.zfxkj.top/picgo/微信公众号.jpg)
