tmux 添加参考连接

--- a/_posts/2024-05-17-tmux.md
+++ b/_posts/2024-05-17-tmux.md
@@ -300,5 +300,9 @@ $ tmux new -ds demo "top"
 $ tmux new -ds test "ping 127.0.0.1"
 ```
 ![tmux-ck-demo](https://tc.zfxkj.top/picgo/tmux-ck-demo.png)
+
+## 参考资料
+- [阮一峰的个人网站](https://www.ruanyifeng.com/blog/2019/10/tmux.html)
+
 ## 微信公众号
 ![微信公众号](https://tc.zfxkj.top/picgo/微信公众号.jpg)
