添加 分类和标签

--- a/_posts/2024-05-17-tmux.md
+++ b/_posts/2024-05-17-tmux.md
@@ -2,7 +2,7 @@
 layout: post
 title: tmux 终端复用神器
 subtitle: "tmux:终端复用神器，提升效率、简化工作流"
-category : [tmux]
+category : [tmux, linux]
 tags : [linux, tmux]
 date:       2024-05-17
 author:     "小张"
