--- a/_posts/2024-05-17-tmux.md
+++ b/_posts/2024-05-17-tmux.md
@@ -87,7 +87,7 @@ $ tmux new -s <session-name>
 ### 3.2 分离会话（后台运行）
 在 Tmux 窗口中，按下`Ctrl+b d`或者输入`tmux detach`命令，就会将当前会话与窗口分离。
 ```bash
-$ tmux detach
+$ tmux detach # 必须是在tmux会话中执行
 ```
 上面命令执行后，就会退出当前 Tmux 窗口，但是会话和里面的进程仍然在后台运行。
 
@@ -135,7 +135,9 @@ $ tmux kill-session -t <session-name>
 ```
 
 ### 3.5 切换会话
-tmux switch命令用于切换会话。
+tmux switch命令用于切换会话。  
+执行`tmux ls`有几个就可以切换几个会话。  
+切换会话必须在 Tmux 窗口中执行。  
 ```bash
 # 使用会话编号
 $ tmux switch -t 0
@@ -161,7 +163,9 @@ Ctrl+b $：重命名当前会话。
 ```
 
 ## 四、窗格操作
-Tmux 可以将窗口分成多个窗格（pane），每个窗格运行不同的命令。以下命令都是在 Tmux 窗口中执行。
+Tmux 可以将窗口分成多个窗格（pane），每个窗格运行不同的命令。  
+窗口可以比作windows的桌面，窗格就是在桌面打开的的一个个软件运行窗口  
+<font size=4 color=red>以下命令都是在 Tmux 会话中执行。</font>
 
 ### 5.1 划分窗格
 `tmux split-window`命令用来划分窗格。
@@ -232,7 +236,12 @@ Ctrl+b q：显示窗格编号。
 ![tmux-cg-demo](https://tc.zfxkj.top/picgo/tmux-cg-demo.png)
 
 ## 五、窗口管理
-除了将一个窗口划分成多个窗格，Tmux 也允许新建多个窗口。
+除了将一个窗口划分成多个窗格，Tmux 也允许新建多个窗口。  
+窗口和窗格的区别：
+- 窗口就像windows的桌面可以新建多个
+- 窗格就像windows的软件运行窗口，可以运行不同的命令
+- 下方整个截图是一个会话，可以理解成显示器
+![窗口和窗格的区别_1](https://tc.zfxkj.top/picgo/窗口和窗格的区别_1.png)
 
 ### 6.1 新建窗口
 `tmux new-window`命令用来创建新窗口。
