修改图片链接地址

--- a/_posts/2021-12-01-frp.md
+++ b/_posts/2021-12-01-frp.md
@@ -6,7 +6,7 @@ category : [内网穿透]
 tags : [frp,内网穿透]
 date:       2021-12-01
 author:     "小张"
-header-img: "https://tc.zfxkj.top/picgo/frp-9a7351f4-a448-4e55-aa70-118e344013ad.jpg"
+header-img: "https://www.zfxkj.top/picgo/frp-9a7351f4-a448-4e55-aa70-118e344013ad.jpg"
 description:  "frp让你远在他乡管理家里的各种设备。"
 ---
 
@@ -21,9 +21,9 @@ description:  "frp让你远在他乡管理家里的各种设备。"
 
 ## 下载及文件介绍
 首先前往GitHub下载frp服务端，我以Ubuntu为例，下载地址：[https://github.com/fatedier/frp/releases](https://github.com/fatedier/frp/releases) 进入下载页面我们会看到这样页面  
-![frp_xz-1a69c8a6-bbce-45d7-b5c2-629af429e8b0](https://tc.zfxkj.top/picgo/frp_xz-1a69c8a6-bbce-45d7-b5c2-629af429e8b0.png)  
+![frp_xz-1a69c8a6-bbce-45d7-b5c2-629af429e8b0](https://www.zfxkj.top/picgo/frp_xz-1a69c8a6-bbce-45d7-b5c2-629af429e8b0.png)  
 我这边是腾讯云的主机所以我要下载linux_amd64的压缩包，根据自己的主机下载适合自己的压缩包，下载完成后解压里面会有这样的一些文件  
-![frp_file-abf04568-4ad8-452a-a0d7-bdb2d43a2c41](https://tc.zfxkj.top/picgo/frp_file-abf04568-4ad8-452a-a0d7-bdb2d43a2c41.png)  
+![frp_file-abf04568-4ad8-452a-a0d7-bdb2d43a2c41](https://www.zfxkj.top/picgo/frp_file-abf04568-4ad8-452a-a0d7-bdb2d43a2c41.png)  
 1. 服务端  
   `frps`是服务端的程序，`frps.ini`是服务端的配置文件，`frps_full.ini`是告诉用户应该怎样设置服务端配置文件。  
   这里建议在配置文件里添加一个token，如`token=123456`
@@ -33,10 +33,10 @@ description:  "frp让你远在他乡管理家里的各种设备。"
 
 ## 服务端安装
 首先将解压后的文件`frps和frps.ini`上传到云主机，上传完成后使用`./frps -c frps.ini`看到下面这样的输入就表示运行成功了  
-![frps_cg-dfe2bc2e-bf63-4050-9e35-62eb77e6651f](https://tc.zfxkj.top/picgo/frps_cg-dfe2bc2e-bf63-4050-9e35-62eb77e6651f.png)
+![frps_cg-dfe2bc2e-bf63-4050-9e35-62eb77e6651f](https://www.zfxkj.top/picgo/frps_cg-dfe2bc2e-bf63-4050-9e35-62eb77e6651f.png)
 
 ## 服务端配置文件
-![frps_ini-162c9887-5fcb-4939-a6b2-778f77b4bea6](https://tc.zfxkj.top/picgo/frps_ini-162c9887-5fcb-4939-a6b2-778f77b4bea6.png)  
+![frps_ini-162c9887-5fcb-4939-a6b2-778f77b4bea6](https://www.zfxkj.top/picgo/frps_ini-162c9887-5fcb-4939-a6b2-778f77b4bea6.png)  
 上面的图就是服务端的配置文件,第2行是设置主程序的端口号，第3行是我自己加的，通过简单地设置就可以使用了。
 
 ## 客户端安装
@@ -44,7 +44,7 @@ description:  "frp让你远在他乡管理家里的各种设备。"
 我这里的客户端是我不用的旧安卓机，我在里面使用软件运行了Ubuntu的系统，所以我要重新下载客户端软件因为运行的是linux的系统手机处理器是`arm64`的所以我应该下载`linux_arm64`的压缩包，将压缩包解压后只要里面的`frpc`文件别的文件直接删除，再将之前设置好的客户端配置文件传输过来运行方式和服务端一样`./frpc -s frpc.ini`
 
 ## 客户端配置文件
-![frpc_ini-ee86ff29-bb5d-4672-8926-ade93548a88f](https://tc.zfxkj.top/picgo/frpc_ini-ee86ff29-bb5d-4672-8926-ade93548a88f.png)  
+![frpc_ini-ee86ff29-bb5d-4672-8926-ade93548a88f](https://www.zfxkj.top/picgo/frpc_ini-ee86ff29-bb5d-4672-8926-ade93548a88f.png)  
 `[common]`下面是服务端的设置第3行的x.x.x.x是服务器的公网IP地址，第2行是我自己加的，因为服务端的配置文件添加了这一项所以客户端中也必须加。下面的就是自己设置了，`type = tcp`中的tcp是可以修改的可以改成udp、http、https等等。`local_ip`：需要穿透的内网ip。`local_port`：需要穿透的内网端口号。`remote_poet` ：穿透后的公网IP端口号。
 
 ## 注意事项
