--- a/_posts/2024-05-17-tmux.md
+++ b/_posts/2024-05-17-tmux.md
@@ -6,13 +6,13 @@ category : [tmux, linux]
 tags : [linux, tmux]
 date:       2024-05-17
 author:     "小张"
-header-img: "https://tc.zfxkj.top/picgo/tmux.png"
+header-img: "https://www.zfxkj.top/picgo/tmux.png"
 description:  "tmux 是一款强大的终端复用器，它允许你在多个终端会话之间轻松切换，并管理多个独立的窗口和窗格。"
 font-color: "#9a11dd"
 ---
 
 ## Tmux 是什么
-![tmux-tp](https://tc.zfxkj.top/picgo/tmux-tp.png)
+![tmux-tp](https://www.zfxkj.top/picgo/tmux-tp.png)
 ### 1.1 会话与进程
 命令行的典型使用方式是，打开一个终端窗口（terminal window，以下简称"窗口"），在里面输入命令。用户与计算机的这种临时的交互，称为一次"会话"（session） 。
 
@@ -55,7 +55,7 @@ $ brew install tmux
 $ tmux
 ```
 上面命令会启动 Tmux 窗口，底部有一个状态栏。状态栏的左侧是窗口信息（编号和名称），右侧是系统信息。
-![tmux-qd](https://tc.zfxkj.top/picgo/tmux-qd.png)
+![tmux-qd](https://www.zfxkj.top/picgo/tmux-qd.png)
 在tmux窗口中显式输入exit命令，就可以退出 Tmux 窗口。
 ```bash
 $ exit
@@ -177,7 +177,7 @@ $ tmux split-window
 # 划分左右两个窗格
 $ tmux split-window -h
 ```
-![tmux-cg](https://tc.zfxkj.top/picgo/tmux-cg.png)
+![tmux-cg](https://www.zfxkj.top/picgo/tmux-cg.png)
 
 ### 5.2 移动光标
 `tmux select-pane`命令用来移动光标位置。
@@ -233,7 +233,7 @@ Ctrl+b z：当前窗格全屏显示，再使用一次会变回原来大小。
 Ctrl+b Ctrl+<arrow key>：按箭头方向调整窗格大小。
 Ctrl+b q：显示窗格编号。
 ```
-![tmux-cg-demo](https://tc.zfxkj.top/picgo/tmux-cg-demo.png)
+![tmux-cg-demo](https://www.zfxkj.top/picgo/tmux-cg-demo.png)
 
 ## 五、窗口管理
 除了将一个窗口划分成多个窗格，Tmux 也允许新建多个窗口。  
@@ -241,7 +241,7 @@ Ctrl+b q：显示窗格编号。
 - 窗口就像windows的桌面可以新建多个
 - 窗格就像windows的软件运行窗口，可以运行不同的命令
 - 下方整个截图是一个会话，可以理解成显示器
-![窗口和窗格的区别_1](https://tc.zfxkj.top/picgo/窗口和窗格的区别_1.png)
+![窗口和窗格的区别_1](https://www.zfxkj.top/picgo/窗口和窗格的区别_1.png)
 
 ### 6.1 新建窗口
 `tmux new-window`命令用来创建新窗口。
@@ -308,10 +308,10 @@ $ tmux new -ds <session-name> <command>
 $ tmux new -ds demo "top"
 $ tmux new -ds test "ping 127.0.0.1"
 ```
-![tmux-ck-demo](https://tc.zfxkj.top/picgo/tmux-ck-demo.png)
+![tmux-ck-demo](https://www.zfxkj.top/picgo/tmux-ck-demo.png)
 
 ## 参考资料
 - [阮一峰的个人网站](https://www.ruanyifeng.com/blog/2019/10/tmux.html)
 
 ## 微信公众号
-![微信公众号](https://tc.zfxkj.top/picgo/微信公众号.jpg)
+![微信公众号](https://www.zfxkj.top/picgo/微信公众号.jpg)
